Fix label truncation calculation
regrssion of #14365

--- a/plugins/CoreHome/angularjs/widget-bydimension-container/widget-bydimension-container.directive.less
+++ b/plugins/CoreHome/angularjs/widget-bydimension-container/widget-bydimension-container.directive.less
@@ -5,16 +5,12 @@
     }
 
     .reportContainer {
-        position: absolute;
         margin-left: 230px;
         min-width: 500px;
+        overflow: auto;
 
         table.dataTable tr td.label {
             max-width: 380px;
-        }
-
-        table.dataTable {
-            width: auto;
         }
     }
 }
